bad/if_else_context_05.example_compiler_output
ERROR
[1mbad/if_else_context_05.lat:10:2: [1;31merror: [0;1muse of undeclared variable `y`[m
	y;
	[1;32m^[m
